<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECEFF1"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/introductory_message"
            android:textColor="#000000"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allowance"
                android:textColor="#000000"
                android:textSize="18sp"
                android:layout_marginLeft="5dp"
                />

            <EditText
                android:id="@+id/allowance"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="100dp"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:textColor="#000000"
                android:textSize="36sp"
                />


        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="horizontal">

            <TextView
                style="@style/activities_style"
                android:layout_height="wrap_content"
                android:text="@string/feeding" />

            <TextView
                android:id="@+id/feeding_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:text="@string/amount_text_field"
                android:textAlignment="center"
                android:textColor="#4CAF50"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:text="@string/feeding_percentage"
                android:textAlignment="center"
                android:textColor="#000000" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#FFFFFF"
            android:orientation="horizontal">

            <TextView
                style="@style/activities_style"
                android:layout_height="wrap_content"
                android:text="@string/savings" />

            <TextView
                android:id="@+id/savings_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:text="@string/amount_text_field"
                android:textAlignment="center"
                android:textColor="#4CAF50"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:text="@string/savings_percentage"
                android:textAlignment="center"
                android:textColor="#000000" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#FFFFFF"
            android:orientation="horizontal">

            <TextView
                style="@style/activities_style"
                android:layout_height="wrap_content"
                android:text="@string/clothing" />

            <TextView
                android:id="@+id/clothing_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:text="@string/amount_text_field"
                android:textAlignment="center"
                android:textColor="#4CAF50"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:text="@string/clothing_percentage"
                android:textAlignment="center"
                android:textColor="#000000" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#FFFFFF"
            android:orientation="horizontal">

            <TextView
                style="@style/activities_style"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/study_materials" />

            <TextView
                android:id="@+id/studyMaterial_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:text="@string/amount_text_field"
                android:textAlignment="center"
                android:textColor="#4CAF50"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:text="@string/study_materials_percentage"
                android:textAlignment="center"
                android:textColor="#000000" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#FFFFFF"
            android:orientation="horizontal">

            <TextView
                style="@style/activities_style"
                android:layout_height="wrap_content"
                android:text="@string/transport" />

            <TextView
                android:id="@+id/transport_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:text="@string/amount_text_field"
                android:textAlignment="center"
                android:textColor="#4CAF50"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:text="@string/transport_percentage"
                android:textAlignment="center"
                android:textColor="#000000" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#FFFFFF"
            android:orientation="horizontal">

            <TextView
                style="@style/activities_style"
                android:layout_height="wrap_content"
                android:text="@string/miscellaneous" />

            <TextView
                android:id="@+id/miscellaneous_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:text="@string/amount_text_field"
                android:textAlignment="center"
                android:textColor="#4CAF50"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:text="@string/miscellaneous_percentage"
                android:textAlignment="center"
                android:textColor="#000000" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:background="#ffffff"
                android:gravity="center"
                android:onClick="calculate"
                android:text="@string/budgit_button"
                android:textAlignment="center"
                android:textColor="#4CAF50"
                android:textStyle="bold" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:gravity="center"
                android:onClick="reset"
                android:text="@string/reset_button"
                android:textAlignment="center"
                android:textColor="#D50000"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
